--- a/ramda-js/style.css
+++ b/ramda-js/style.css
@@ -1,3 +1,10 @@
+.logo {
+    margin: 40px 0;
+    font-family: 'Roboto' sans-serif;
+    font-size: 80px;
+    font-weight: 400px;
+}
+
 .menu {
     background-color: #35444f;
     text-align: center;
@@ -19,11 +26,15 @@
 }
 
 .content {
+    justify-content: space-between;
+    gap: 50px;
+    display: flex;
     margin-top: 50px;
     margin-bottom: 50x;
 }
 
 .content__menu {
+    height: 100%;
     width: 344px;
     border: 1px solid rgba(0, 0, 0, 0.1);
 }
@@ -41,4 +52,45 @@
     background-color: #DBDBDB;
     transition: 0.5s;
     color: black;
+}
+
+.content__right img {
+    border: 1px solid #000000;
+    padding: 75px 280px;
+}
+
+.content__right p {
+    margin-top: 35px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+
+
+    color: #2C2C2C;
+
+}
+
+footer {
+    display: inline-block;
+    font-size: 28px;
+    background-color: rgba(99, 105, 110, 0.48);
+
+}
+
+.footer__item {
+    display: inline-block;
+    padding: 10px 0;
+    margin: 10px 10px;
+}
+
+footer a {
+    transition: 0.5s;
+}
+
+footer a:hover {
+    transition: 0.5s;
+    color: #3181A6;
+    border-bottom: 1px solid #3181A6;
 }
