--- a/игра-посадка/style.css
+++ b/игра-посадка/style.css
@@ -4,7 +4,7 @@
     padding: 0 120px;
 }
 
-header {
+.header {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
